--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,7 @@ include_directories(SYSTEM
 # enum your files 
 add_executable(executable 
 labNumberOne.cpp,
-main.cpp,
-string.h
+main.cpp
 ) 
 
 target_link_libraries(executable)
