--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,8 @@ include_directories(SYSTEM
 # enum your files 
 add_executable(executable 
 labNumberOne.cpp,
-main.cpp
+main.cpp,
+string.h
 ) 
 
 target_link_libraries(executable)
