--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ ADD_DEFINITIONS(
 # enum your files
 add_executable(executable
     main.cpp
-    string.cpp
+    //string.cpp
 )
 
 target_link_libraries(executable)
