--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ set(CMAKE_CXX_FLAGS
 # enum your files
 add_executable(executable
   main.cpp
+  sort.cpp
 )
 
 target_link_libraries(executable -fsanitize=address)
